--- a/about.html
+++ b/about.html
@@ -17,21 +17,21 @@
             <a href="portfolio.html">Portfolo</a>
             <script src="./javascript.js"></script>  
         </nav>
-        <section>  
     </header>
-        <h1>Cooking</h1>
-        <p>orem ipsum dolor sit amet, consectetur adipiscing elit, 
+        <div class="about">
+            <h1>Cooking</h1>
+            <p>orem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt ut labore et dolore magna 
             aliqua. Ut udfhidenim ad minim veniam, quis nostrud exercitation
              ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate 
               velit esse cillum dolore eu fugiat nulla pariatur. 
-            </p>
-            <img src="./images/cooking.jpeg" alt="Cooking image">
-    </section>
-    <section>
-        <h1>Photography</h1>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit 
+                </p>
+                <img src="./images/cooking.jpeg" alt="Cooking image">
+        </div>
+        <div class=" about">
+            <h1>Photography</h1>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit 
             voluptatem accusantium doloremque laudantium, totam rem aperiam, 
             eaque ipsa quae ab illo inventore veritatis et quasi architecto 
             beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem 
@@ -39,10 +39,10 @@
             consequuntur magni dolores eos qui ratione voluptatem sequi 
             nesciunt.</p>
             
-            <img src="./images/cameras_pexels_1750.jpg" alt="Pictures of cameras">
-           
-    </section>
-    <section>
+                <img src="./images/cameras_pexels_1750.jpg" alt="Pictures of cameras">
+        </div>
+  
+        <div class="about">
         <h1>Screen Printing</h1>
         <p>ut I must explain to you how all this mistaken idea of denouncing 
             pleasure and praising pain was born and I will give you a complete 
@@ -51,7 +51,13 @@
             No one rejects, dislikes, or avoids pleasure itself, because it is 
             pleasure, but because those who do not know how to pursue pleasure 
             rationally encounter consequences that are extremely painful.</p>
-    </section>
     <img src="./images/Screen-Printing.webp" alt="Image of a person screen printing">
+        </div>
+        <footer>
+            <div class="footer">
+                <a href="https://www.linkedin.com/" target=" _blank"><div class="icon linkedin"></div> 
+                <a href="https://www.youtube.com/" target=" _blank"><div class="icon youtube"></div> 
+            </footer>
+            </div>
 </body>
 </html>
