--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <nav class = "nav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="portfolio.html">Portfolo</a>
+        <a href="portfolio.html">Portfolio</a>
         <script src="./javascript.js"></script>  
     </nav>
-
-    <h1>Student Web Developer</h1>
-    <p>Always curious, always learning. </p>
-    <p>“Trust yourself that you can do it and get it.” ―Baz Luhrmann.</p>
+    <div class="about">
+        <h1>Student Web Developer</h1>
+        <p>Always curious, always learning. </p>
+        <p>“Trust yourself that you can do it and get it.” ―Baz Luhrmann.</p>
+    </div>
    <footer>
     <div class="footer">
         <a href="https://www.linkedin.com/" target=" _blank"><div class="icon linkedin"></div> 
