--- a/portfolio.html
+++ b/portfolio.html
@@ -13,30 +13,29 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="portfolio.html">Portfolo</a>
+        <a href="portfolio.html">Portfolio</a>
         <script src="./javascript.js"></script>  
     </nav>
 
-    <section class>
+    <div class="about">
         <h1>Project 1</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
             Modi at earum fuga harum alias nobis, eaque optio laudantium 
             dolor sed eligendi consequatur distinctio aperiam accusantium, 
             architecto exercitationem perferendis minus error.</p>
         <img src="./images/coding-programming-project-ideas-1128x635.jpg" alt="">
-    </section>
-
-    <section>
-        <h1>Project 2</h1>
-    <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution 
+        </div>
+        <div class="about">
+            <h1>Project 2</h1>
+        <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution 
         of letters, as opposed to using 'Content here, content here', making it look 
         like readable English. Many desktop publishing packages and web page 
         editors now use Lorem Ipsum as their default model text, and a search
         for 'lorem ipsum' will uncover many web sites still in their infancy. </p>
-        <img src="./images/1000_F_513085939_30cLOb9yyrwYHnJ3gMjzhGunZE0Pj6y1.jpg" alt="">
-    </section>
+            <img src="./images/1000_F_513085939_30cLOb9yyrwYHnJ3gMjzhGunZE0Pj6y1.jpg" alt="">
+        </div>
 
-    <section>
+    <div class="about">
         <h1>Project 3</h1>
         <p>he standard chunk of Lorem Ipsum used since the 1500s is reproduced 
             below for those interested. Sections 1.10.32 and 1.10.33 from "de 
@@ -44,10 +43,14 @@
             exact original form, accompanied by English versions from the 1914 
             translation by H. Rackham.</p>
             <img src="./images/1000_F_313147002_3qboUpD4fSSfzKLesojWhP3b56hD2Bev.jpg" alt="">
-    </section>
-   
+        </div>
 
-
+    <footer>
+        <div class="footer">
+            <a href="https://www.linkedin.com/" target=" _blank"><div class="icon linkedin"></div> 
+            <a href="https://www.youtube.com/" target=" _blank"><div class="icon youtube"></div> 
+        </footer>
+        </div>
        
 </body>
 </html>
