--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         <a href="https://www.youtube.com/" target=" _blank"><div class="icon youtube"></div> 
     </footer>
     </div>
-  
+    <script src="./javascript.js"></script>
 </body>
 </html>
